# PlotMyVert

./: .gitignore  README.md  ecosystem.config.cjs  nuxt.config.ts  package-lock.json  package.json
components/: Plotly.client.vue  SessionPopup.vue  entry.vue
composables/: apiFetch.js  getLoginStatus.js  useFetch.js
layouts/: default.vue
pages/: index.vue
pages/browse/: index.vue  new.vue
plotmyvert_backend/: .dockerignore  .python-version  Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
plotmyvert_backend/plotmyvert_backend/: asgi.py  settings.py  urls.py  wsgi.py
plotmyvert_backend/plotmyvert_backend_api/: admin.py  apps.py  forms.py  lib.py  models.py  serializers.py  urls.py  views.py
plotmyvert_backend/plotmyvert_backend_api/migrations/: 0001_initial.py  0002_jumpsessionmodel_plotly_json.py  0003_remove_jumpsessionmodel_plotly_html.py
